# gpt3_rs

./: Cargo.toml  LICENSE  readme.md
src/: client.rs  const_str.rs  error.rs  into_vec.rs  lib.rs  macros.rs  main.rs  main.txt  model.rs  traits.rs
src/action/: answer.rs  classification.rs  completion.rs  edit.rs  mod.rs  search.rs
src/api/: answers.rs  classifications.rs  completions.rs  edits.rs  mod.rs  searches.rs
src/api/files/: content.rs  content_checked.rs  delete.rs  list.rs  metadata.rs  mod.rs  retrieve.rs  upload.rs
