[package]
name = "gpt3-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
typed-builder = "0.10.0"
derive_builder = "*"
serde_json = "1.0.81"

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.tokio]
version = "1.18.2"
features = ["rt-multi-thread"]