[package]
name = "gpt3_rs"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An API wrapper for OpenAi's gpt-3"
repository = "https://github.com/Sleepy-Kitten/gpt3_rs"
keywords = ["gpt-3", "gpt3", "OpenAi", "ai", "api"]
categories = ["api-bindings"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.11.2"
serde_json = "1.0.81"
async-trait = "0.1.53"

[dependencies.reqwest]
version = "0.11.10"
features = ["json", "multipart"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[features]
blocking = ["reqwest/blocking"]

[dev-dependencies]
gpt3_rs = { path = ".", features = ["blocking"] }
